using Safari.Model;
using Safari.Model.GameSpeed;
using Safari.Model.Jeep;
using Safari.Model.Map;
using Safari.Model.Rangers;
using Safari.View.Animals;
using Safari.View.Rangers;
using Safari.View.World.Map;
using System.Collections.Generic;
using UnityEngine;

namespace Safari.View
{
    public class JeepCollectionController : MonoBehaviour
    {

		private List<JeepDisplay> displayers;
		public JeepDisplay JeepDisplayPrefab;
        private JeepCollection jeepCollection;

		public List<JeepDisplay> Displayers { get { return displayers; } }

		private Dictionary<GridPosition, Vector3> gridPositionMapping;
		public Dictionary<GridPosition, Vector3> GridPositionMapping { get { return gridPositionMapping; } }

		void Start()
        {
            displayers = new List<JeepDisplay>();
			jeepCollection = SafariGame.Instance.Jeeps;
			jeepCollection.Added += OnJeepAdded;
			

		}

		public void OnJeepBuy()
		{
			jeepCollection.Add(new Jeep());
			
			Debug.Log("Jeep Bought");
		}

        private void OnJeepAdded(object sender, Jeep jeep)
        {
			JeepDisplay display = Instantiate(JeepDisplayPrefab, jeep.Position,
				Quaternion.identity,
				new InstantiateParameters()
				{
					parent = transform,
					worldSpace = false
				});
			display.Init(jeep, gridPositionMapping);
			
			displayers.Add(display);
		}

		public void InjectGridPositionMappingData(MapDisplay.MapInitializedEventArgs args)
		{
			gridPositionMapping = new Dictionary<GridPosition, Vector3>();
			foreach (var item in args.Displayers)
			{
				gridPositionMapping.Add(item.Value.Position, item.Key);
			}
		}













		// Update is called once per frame
		void Update()
        {
        
        }
    }
}
