@startuml
namespace View{
class JeepCollectionController{

}

class JeepDisplay{
    +jeepPrefab: GameObject
}
}
Unity.MonoBehaviour <|-- JeepDisplay
JeepDisplay -- "-jeep" Model.Jeep: displays >

JeepCollectionController *-- "-displayers" JeepDisplay: manages lifecycle >

JeepCollectionController -- Model.Safari: watches the jeep collection > 
@enduml